--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "text-format": "file:",
     "undici": "^6.6.2",
     "uuid": "^9.0.1"
   },
