--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "clsx": "^2.1.0",
     "google-auth-library": "^9.6.3",
     "google-one-tap": "^1.0.6",
-    "next": "^14.2.3",
+    "next": "14.x.x",
     "next-auth": "^4.24.6",
-    "next-intl": "^3.9.1",
+    "next-intl": "^3.0.0",
     "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
